// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mc capture 1`] = `
Array [
  Float32Array [
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
  ],
  Float32Array [
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
  ],
  Float32Array [
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
  ],
  Float32Array [
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
    4,
  ],
]
`;

exports[`mc sampleseq 1`] = `
Float32Array [
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`mc sampleseq 2`] = `
Float32Array [
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
]
`;

exports[`mc table 1`] = `
Float32Array [
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
]
`;

exports[`mc table 2`] = `
Float32Array [
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
]
`;

exports[`mc table 3`] = `
Float32Array [
  27,
  27,
  27,
  27,
  27,
  27,
  27,
  27,
  27,
  27,
  27,
  27,
  27,
  27,
  27,
  27,
]
`;

exports[`mc table 4`] = `
Float32Array [
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
  42,
]
`;
